WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147394
Animations sometimes fail to start
https://bugs.webkit.org/show_bug.cgi?id=147394
Summary
Animations sometimes fail to start
Simon Fraser (smfr)
Reported
2015-07-28 18:36:25 PDT
Animations sometimes fail to start
Attachments
Patch
(13.88 KB, patch)
2015-07-28 18:43 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(13.85 KB, patch)
2015-07-28 18:46 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-07-28 18:43:48 PDT
Created
attachment 257718
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-07-28 18:46:45 PDT
Created
attachment 257719
[details]
Patch
Simon Fraser (smfr)
Comment 3
2015-07-28 19:00:00 PDT
https://trac.webkit.org/r187535
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug